# serializer version: 1
# name: test_diagnostics_cloudhook_instance
  dict({
    'has_cloudhooks': True,
    'has_valid_external_webhook_url': True,
    'received_activity_data': False,
    'received_measurements': list([
      1,
      8,
      5,
      76,
      88,
      4,
      12,
      71,
      73,
      6,
      9,
      10,
      11,
      54,
      77,
      91,
      123,
      155,
      168,
      169,
      198,
      197,
      196,
      170,
    ]),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': True,
  })
# ---
# name: test_diagnostics_polling_instance
  dict({
    'has_cloudhooks': False,
    'has_valid_external_webhook_url': False,
    'received_activity_data': False,
    'received_measurements': list([
      1,
      8,
      5,
      76,
      88,
      4,
      12,
      71,
      73,
      6,
      9,
      10,
      11,
      54,
      77,
      91,
      123,
      155,
      168,
      169,
      198,
      197,
      196,
      170,
    ]),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': False,
  })
# ---
# name: test_diagnostics_webhook_instance
  dict({
    'has_cloudhooks': False,
    'has_valid_external_webhook_url': True,
    'received_activity_data': False,
    'received_measurements': list([
      1,
      8,
      5,
      76,
      88,
      4,
      12,
      71,
      73,
      6,
      9,
      10,
      11,
      54,
      77,
      91,
      123,
      155,
      168,
      169,
      198,
      197,
      196,
      170,
    ]),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': True,
  })
# ---
